# pcr

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst  bootstrap  clean  test
scripts/: clean
scripts/travis/: build
src/: config.h.in  main.c  match.c  match.h
src/test/: CMakeLists.txt  test-main.c  test_match.cpp
test_data/: test.fa
